# csse4011-thrasos-pistachio

./: README.md  project_overview.md  team_members.md
ML/: exportonnx.py  image.py  imgae2.py
core2/: CMakeLists.txt  prj.conf
core2/src/: main.c
jetson/src/: main.cpp  mnist_video_inference.cpp  yolo_video_inference.cpp  yolo_with_serial.cpp
nrf52840/include/: servo.h
nrf52840/lib/: classification.c  display_data.c  servo.c  ultrasonic.c
nrf52840/main/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
nrf52840/main/src/: main.c
thingy52/include/: button.h  led.h  rtc.h  thingy.h
thingy52/prac2/: CMakeLists.txt  README.md  prj.conf  sample.yaml
thingy52/prac2/boards/: thingy52_nrf52832.overlay
thingy52/prac2/src/: main.c
thingy52/src/lib/: button.c  led.c  rtc.c  thingy.c
